# wp4_plate_measurment

./: Dockerfile  README.md  dev.Dockerfile  dev_build_image.sh  dev_container_bringup.sh  init.sh  main.py
install/: local_setup.sh  setup.sh
install/ur5_scan_path_service/lib/ur5_scan_path_service/: servo_keyboard_input  ur5_scan_path_service
install/ur5_scan_path_service/share/ament_index/resource_index/package_run_dependencies/: ur5_scan_path_service
install/ur5_scan_path_service/share/ament_index/resource_index/parent_prefix_path/: ur5_scan_path_service
install/ur5_scan_path_service/share/ur5_scan_path_service/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur5_scan_path_service/share/ur5_scan_path_service/cmake/: ur5_scan_path_serviceConfig-version.cmake  ur5_scan_path_serviceConfig.cmake
install/ur5_scan_path_service/share/ur5_scan_path_service/config/: moveit_servo.yaml  ur5.srdf  ur5.urdf  ur5_controllers.yaml  ur_controllers.yaml
install/ur5_scan_path_service/share/ur5_scan_path_service/environment/: ament_prefix_path.dsv  path.dsv
install/ur5_scan_path_service/share/ur5_scan_path_service/launch/: scan_service.launch.py  sim_scan_service.launch.py  test_scan_service.launch.py
log/: latest_build
src/flip_master/: main.py
src/flip_master/data/pcd/: 01-bin.pcd  02-bin.pcd
src/flip_master/modules/: comand_line.py  flip_master_9000.py  flippo.py  plate_point_cloud.py  point_cloud.py  trispector_1060.py  trispector_listener.py  ur5_nodes.py
